style(css): fix line gap on products page

--- a/css/custom.css
+++ b/css/custom.css
@@ -74,4 +74,8 @@
     .product-wrapper {
         width: 1280px;
     }
+
+    .analogue:nth-child(3n), .digital:nth-child(3n) {
+        left: 564px!important;
+    }
 }
